Fixed alignment issue on 'Demo' title

--- a/src/media-queries/450px.scss
+++ b/src/media-queries/450px.scss
@@ -152,8 +152,8 @@
         padding: 1rem;
         display: flex;
 
-        &:nth-child(2) {
-          padding-left: 2rem;
+        &:nth-child(1) {
+          padding-right: 2rem;
         }
       }
 
